# decay-for-agent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.know/: index.jsonl
.know/docs/: capabilities.md  roadmap.md
.knowledge/: index.jsonl
docs/: audit.md  ops.md  ripgrep-scope-role-validation.md  ripgrep-validation.md  ripgrep-wave1-value-noise-validation.md  roadmap.md  validation-matrix.md  value-validation.md
docs/arch/: decay.md
docs/decision/: detection-priority.md  local-bloat-case-map.md  local-bloat-metric-extension-spec.md  local-bloat-value-boundary.md  scan-scope-and-local-bloat-value.md  v0.1.0-closeout.md
docs/milestones/: m1.md  m2.md
docs/plans/: v0.1-dogfood-validation.md  (+2 more)
examples/: find_dupes.rs
mcp/: package-lock.json  package.json
src/: action.rs  aggregate.rs  chronic.rs  classify.rs  compare.rs  config.rs  data_store.rs  db.rs  diagnose.rs  diff.rs  error.rs  filter.rs  filter_pipeline.rs  fingerprint.rs  git.rs  git_pipeline.rs  impact.rs  lib.rs  main.rs  parser.rs  patch.rs  pipeline.rs  plan.rs  prevention.rs  profile.rs  render.rs  report.rs  run.rs  scan.rs  scope.rs  score.rs  store.rs  summary.rs  test_helpers.rs  trend.rs  types.rs  util.rs  walk.rs
templates/: health-report.md
tests/: diff_test.rs  fingerprint_test.rs  integration.rs  metric_cognitive_test.rs  metric_condition_ops_test.rs  metric_cyclomatic_test.rs  metric_nesting_test.rs  metric_params_test.rs  metric_statements_test.rs  parser_test.rs  store_test.rs
(+173 files in other folders)
