[package]
name = "decay"
version = "0.1.0"
description = "Project health monitoring for AI agents"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
dirs = "6"
walkdir = "2"
git2 = "0.20"

[dev-dependencies]
tempfile = "3"
