[package]
name = "decay"
version = "0.1.0"
description = "Project health monitoring for AI agents"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
dirs = "6"
walkdir = "2"
toml = "0.8"
ignore = "0.4"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
