[package]
name = "decay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
